ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: result-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "result.gan2.xyz"
    secretName: nginx-tls-default
  rules:
  - host: result.gan2.xyz
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: result
            port:
              number: 80


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "vote.gan2.xyz"
    - "www.gan2.xyz"
    secretName: nginx-tls-default
  rules:
  - host: vote.gan2.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote
            port:
              number: 80
  - host: www.gan2.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote
            port:
              number: 80
